testsuite/tests/grammar/invalid_predicate/common.lkt
class FooNode implements Node[FooNode] {
}

class Example: FooNode implements TokenNode {
    fun pred(): Bool = true
}
